# practice

./: CMakeLists.txt  CMakePresets.json  background.cpp  background.h  coins.cpp  coins.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  road.cpp  road.h
